[FIX] Eliminate search input flicker during searching posts/projects

--- a/apps/blog_web/assets/css/phoenix.css
+++ b/apps/blog_web/assets/css/phoenix.css
@@ -9,7 +9,7 @@
   cursor: wait;
 }
 
-.phx-change-loading {
+.phx-change-loading:not(input):not(form) {
   opacity: 0.5;
   cursor: wait;
 }
